feat(bot): change logic for saving tags and filters - Add Empty answer